top components styles and creations done

--- a/app/components/vulture-section/template.hbs
+++ b/app/components/vulture-section/template.hbs
@@ -4,12 +4,12 @@
             <h2>The Cut</h2>
         </div>
         <div class="vulture-section-buttons">
-            {{ #link }}
-            <button>Style</button>
-            <button>Self</button>
-            <button>Culture</button>
-            <button>Power</button>
-            {{ /link }}
+            {{!-- {{#if links }} --}}
+            <a target="_blank" href="{{ links }}">Style</a>
+            <a target="_blank" href="{{ links }}">Self</a>
+            <a target="_blank" href="{{ links }}">Culture</a>
+            <a target="_blank" href="{{ links }}">Power</a>
+            {{!-- {{/if }} --}}
         </div>
     </div>
 </header>
