all layout components added, footers included

--- a/app/components/vulture-section/template.hbs
+++ b/app/components/vulture-section/template.hbs
@@ -1,7 +1,7 @@
 <header data-uri="{{ default _ref _self }}" class="{{componentVariation}} " data-editable="settings">
     <div class="vulture-section">
         <div class="vulture-section-title">
-            <h2>The Cut</h2>
+            <img src="{{ imageUrl }}" class="vulture-section-image" data-src="{{ imageUrl }}">
         </div>
         <div class="vulture-section-buttons">
             {{!-- {{#if links }} --}}
