layout components and css done

--- a/app/components/magazine-section/template.hbs
+++ b/app/components/magazine-section/template.hbs
@@ -4,7 +4,7 @@
         <li class="magazine-section-item"><a target="_blank" href="{{ links }}">the cut</a></li>
         <li class="magazine-section-item"><a target="_blank" href="{{ links }}">vulture</a></li>
         <li class="magazine-section-item"><a target="_blank" href="{{ links }}">grub street</a></li>
-        <li class="magazine-section-item"><a target="_blank" href="{{ links }}"><img src="{{ imageUrl }}" class="magazine-section-image" data-src="{{ imageUrl }}"></a></li>
+        <li class="magazine-section-item"><a target="_blank" href="{{ links }}"><img src="https://images.ctfassets.net/hkpf2qd2vxgx/1bHL3BqjLsDpwybiPqv1o3/8ff5d0731b749e03595aa49097afb4e4/NYMag-Logo-1024x265.png" class="magazine-section-image" data-src="https://images.ctfassets.net/hkpf2qd2vxgx/1bHL3BqjLsDpwybiPqv1o3/8ff5d0731b749e03595aa49097afb4e4/NYMag-Logo-1024x265.png"></a></li>
         <li class="magazine-section-item"><a target="_blank" href="{{ links }}">the strategist</a></li>
         <li class="magazine-section-item"><a target="_blank" href="{{ links }}">the magazine</a></li>
     </ul>
