--- a/app/components/vulture-section/template.hbs
+++ b/app/components/vulture-section/template.hbs
@@ -1,7 +1,7 @@
 <header data-uri="{{ default _ref _self }}" class="{{componentVariation}} " data-editable="settings">
     <div class="vulture-section">
         <div class="vulture-section-title">
-            <img src="{{ imageUrl }}" class="vulture-section-image" data-src="{{ imageUrl }}">
+            <img src="https://butmakeitfashioncom.files.wordpress.com/2018/12/Screen-Shot-2018-12-16-at-2.36.01-PM.png?w=324" class="vulture-section-image" data-src="https://butmakeitfashioncom.files.wordpress.com/2018/12/Screen-Shot-2018-12-16-at-2.36.01-PM.png?w=324">
         </div>
         <div class="vulture-section-buttons">
             {{!-- {{#if links }} --}}
