fixes de los links components para que sean unicos

--- a/app/components/vulture-section/template.hbs
+++ b/app/components/vulture-section/template.hbs
@@ -1,15 +1,15 @@
 <header data-uri="{{ default _ref _self }}" class="{{componentVariation}} " data-editable="settings">
     <div class="vulture-section">
         <div class="vulture-section-title">
-            <img src="https://butmakeitfashioncom.files.wordpress.com/2018/12/Screen-Shot-2018-12-16-at-2.36.01-PM.png?w=324" class="vulture-section-image" data-src="https://butmakeitfashioncom.files.wordpress.com/2018/12/Screen-Shot-2018-12-16-at-2.36.01-PM.png?w=324">
+            <a target="_blank" href="{{ theCut }}">
+                <img src="https://butmakeitfashioncom.files.wordpress.com/2018/12/Screen-Shot-2018-12-16-at-2.36.01-PM.png?w=324" class="vulture-section-image" data-src="https://butmakeitfashioncom.files.wordpress.com/2018/12/Screen-Shot-2018-12-16-at-2.36.01-PM.png?w=324">
+            </a>
         </div>
         <div class="vulture-section-buttons">
-            {{!-- {{#if links }} --}}
-            <a target="_blank" href="{{ links }}">Style</a>
-            <a target="_blank" href="{{ links }}">Self</a>
-            <a target="_blank" href="{{ links }}">Culture</a>
-            <a target="_blank" href="{{ links }}">Power</a>
-            {{!-- {{/if }} --}}
+            <a target="_blank" href="{{ style }}">Style</a>
+            <a target="_blank" href="{{ self }}">Self</a>
+            <a target="_blank" href="{{ culture }}">Culture</a>
+            <a target="_blank" href="{{ power }}">Power</a>
         </div>
     </div>
 </header>
