better css wrapping and separator colunm

--- a/app/components/vulture-section/template.hbs
+++ b/app/components/vulture-section/template.hbs
@@ -6,10 +6,12 @@
             </a>
         </div>
         <div class="vulture-section-buttons">
-            <a target="_blank" href="{{ style }}">Style</a>
-            <a target="_blank" href="{{ self }}">Self</a>
-            <a target="_blank" href="{{ culture }}">Culture</a>
-            <a target="_blank" href="{{ power }}">Power</a>
+            <ul>
+                <li><a target="_blank" href="{{ style }}">Style</a></li>
+                <li><a target="_blank" href="{{ self }}">Self</a></li>
+                <li><a target="_blank" href="{{ culture }}">Culture</a></li>
+                <li><a target="_blank" href="{{ power }}">Power</a></li>
+            </ul>
         </div>
     </div>
 </header>
