most viewd stories component added, styled and side section to layout added

--- a/app/components/article/template.hbs
+++ b/app/components/article/template.hbs
@@ -1,5 +1,6 @@
 <article data-uri="{{ default _ref _self }}" class="{{ componentVariation }}{{ if @root.locals.edit ' editing' }}" role="main">
   <header class="article-header">
+    {{!-- {{> articleType articleType }} --}}
     <div class="lede-wrapper">
       <div class="primary-area">
         <div class="article-header-section">
