--- a/app/layouts/layout/template.hbs
+++ b/app/layouts/layout/template.hbs
@@ -20,6 +20,7 @@
     <section class="top" data-editable="top" data-track-zone="top">{{> component-list top }}</section>
     <section class="wrapper">
       <section class="main" data-editable="main" data-track-zone="main">{{> component-list main }}</section>
+      <section class="side" data-editable="side" data-track-zone="side">{{> component-list side }}</section>
     </section>
     <footer class="bottom" data-editable="bottom" data-track-zone="bottom">{{> component-list bottom }}</footer>
     {{! invisible foot component list }}
