--- a/app/styleguides/_default/components/best-the-cut.css
+++ b/app/styleguides/_default/components/best-the-cut.css
@@ -1,7 +1,7 @@
-.most-viewed-stories {
+.best-the-cut {
   height: 100vh;
 
-  .most-viewed {
+  .best-cut {
     border-top: 1px solid black;
     width: 25vh;
     position: sticky;
