--- a/app/components/advertisement/template.hbs
+++ b/app/components/advertisement/template.hbs
@@ -1,3 +1,5 @@
-<div data-uri="{{ default _ref _self }}" data-editable="settings">
+<div data-uri="{{ default _ref _self }}" class="advertisement-space" data-editable="settings">
+    <section class="advertisement">
         <a class="adImage" href=" {{ imageUrl }} "><img src=" {{ imageSrc }} " data-src=" {{ imageSrc }} "></a>
+    </section>
 </div>
