--- a/app/components/best-the-cut/template.hbs
+++ b/app/components/best-the-cut/template.hbs
@@ -1,6 +1,6 @@
-<div data-uri="{{ default _ref _self }}" class="most-viewed-stories" data-editable="settings">
-    <section class="most-viewed">
-        <h1>Most viewed stories</h1>
+<div data-uri="{{ default _ref _self }}" class="best-the-cut" data-editable="settings">
+    <section class="best-cut">
+        <h1>best of the cut</h1>
         <ul>
             {{#each stories as |story|}}
             {{#if story}}<li><a href="{{ story.url }}"><span>{{ story.title }}</span></a></li>{{/if}}
