style of sticky not overlapping and working properly

--- a/app/styleguides/_default/components/advertisement.css
+++ b/app/styleguides/_default/components/advertisement.css
@@ -1,16 +1,15 @@
 .advertisement-space {
-  height: 100vh;
+  height: 25%;
 
   .advertisement {
     position: sticky;
-    height: 25vh;
+    height: 12.5%;
     top: 1vh;
+    text-aling: center;
 
     img {
-      max-width: 25vh;
-      max-height: 25vh;
-      min-width: 24vh;
-      min-height: 24vh;
+      width: 200px;
+      height: 200px;
     }
   }
 }
