--- a/app/styleguides/_default/components/best-the-cut.css
+++ b/app/styleguides/_default/components/best-the-cut.css
@@ -1,5 +1,5 @@
 .best-the-cut {
-  height: 100vh;
+  height: 25%;
 
   .best-cut {
     border-top: 1px solid black;
@@ -7,6 +7,7 @@
     position: sticky;
     top: 1vh;
     min-height: 1vh;
+    height: 12.5%;
 
     h1 {
       text-align: center;
