side component instances styles applied

--- a/app/components/advertisement/template.hbs
+++ b/app/components/advertisement/template.hbs
@@ -1,5 +1,5 @@
-<div data-uri="{{ default _ref _self }}" class="advertisement-space" data-editable="settings">
-    <section class="advertisement">
-        <a class="adImage" href=" {{ imageUrl }} "></a><img src=" {{ imageSrc }} " data-src=" {{ imageSrc }} "></a>
+<div data-uri="{{ default _ref _self }}" class="{{ componentVariation }}" data-editable="settings">
+    <section class="advertisement-space">
+        <a class="adImage" href=" {{ imageUrl }} "></a><img class="{{componentVariation}} sideImage" src=" {{ imageSrc }} " data-src=" {{ imageSrc }} "></a>
     </section>
 </div>
