--- a/app/styleguides/_default/components/advertisement_top.css
+++ b/app/styleguides/_default/components/advertisement_top.css
@@ -1,15 +1,15 @@
-.advertisement {
+.advertisement_top {
   height: 25%;
 
   .advertisement-space {
     position: sticky;
-    height: 12.5%;
-    top: 1vh;
+    height: 12%;
+    top: 0;
     text-aling: center;
 
     .sideImage {
-      width: 200px;
-      height: 200px;
+      width: 350px;
+      height: 350px;
     }
   }
 }
