--- a/app/components/vulture-section/template.hbs
+++ b/app/components/vulture-section/template.hbs
@@ -1,11 +1,11 @@
 <header data-uri="{{ default _ref _self }}" class="{{componentVariation}} " data-editable="settings">
-    <div class="vulture-section">
+    <div class="{{componentVariation}} vulture-section-div">
         <div class="vulture-section-title">
             <a target="_blank" href="{{ theCut }}">
-                <img src="https://butmakeitfashioncom.files.wordpress.com/2018/12/Screen-Shot-2018-12-16-at-2.36.01-PM.png?w=324" class="vulture-section-image" data-src="https://butmakeitfashioncom.files.wordpress.com/2018/12/Screen-Shot-2018-12-16-at-2.36.01-PM.png?w=324">
+                <img src="https://butmakeitfashioncom.files.wordpress.com/2018/12/Screen-Shot-2018-12-16-at-2.36.01-PM.png?w=324" class="{{componentVariation}} vulture-section-image" data-src="https://butmakeitfashioncom.files.wordpress.com/2018/12/Screen-Shot-2018-12-16-at-2.36.01-PM.png?w=324">
             </a>
         </div>
-        <div class="vulture-section-buttons">
+        <div class="{{componentVariation}} vulture-section-buttons">
             <ul>
                 <li><a target="_blank" href="{{ style }}">Style</a></li>
                 <li><a target="_blank" href="{{ self }}">Self</a></li>
