fixes to publish and subscribe and data handling of tags

--- a/app/components/articleTypeTag/template.hbs
+++ b/app/components/articleTypeTag/template.hbs
@@ -1,5 +1,5 @@
-<div data-uri="{{ default _ref _self }}" class="articleTypeTag-div" data-editable="settings">
-    <ul>
+<div data-uri="{{ default _ref _self }}" class="articleTypeTag" data-editable="settings">
+    <ul class="articleTypeTag-list">
         {{#each keyTag as |tag|}}
         <li><a>{{tag.text}}</a></li>
         {{/each}}
